--- a/privacy.html
+++ b/privacy.html
@@ -1,86 +1,140 @@
-Privacy Policy
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Privacy Policy</title>
+  <style>
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;line-height:1.6;margin:0;background:#fff;color:#111}
+    .container{max-width:860px;margin:0 auto;padding:32px 20px}
+    h1{font-size:1.9rem;margin:0 0 0.5rem}
+    .muted{color:#666;font-size:0.95rem;margin-bottom:1.5rem}
+    h2{font-size:1.3rem;margin-top:1.5rem}
+    ol{padding-left:1.2rem}
+    ul{padding-left:1.2rem}
+    a{color:#0b69c7;text-decoration:none}
+    a:hover{text-decoration:underline}
+    hr{border:none;border-top:1px solid #eee;margin:1.5rem 0}
+    footer{margin-top:2rem;color:#666;font-size:0.9rem}
+  </style>
+</head>
+<body>
+  <main class="container">
+    <h1>Privacy Policy</h1>
+    <p class="muted"><strong>Last updated:</strong> October 2025</p>
 
-1. Introduction
+    <ol>
+      <li>
+        <h2>Introduction</h2>
+        <p>
+          This Privacy Policy explains how we collect, use, and protect information when you use our mobile
+          applications (collectively referred to as “the Apps”). By installing or using any of our Apps, you agree to
+          the terms described below.
+        </p>
+      </li>
 
-This Privacy Policy explains how we collect, use, and protect information when you use our mobile applications (collectively referred to as “the Apps”).
-By installing or using any of our Apps, you agree to the terms described below.
+      <li>
+        <h2>Information We Collect</h2>
+        <p>Our Apps are designed to respect your privacy. Depending on the specific features of each App, we may collect the following types of information:</p>
 
-2. Information We Collect
+        <h3>a. Personal Information</h3>
+        <p>
+          We <strong>do not require or collect personal information</strong> such as your name, email address, phone number,
+          or physical address unless the App specifically asks for it (for example, if you contact us for support).
+        </p>
 
-Our Apps are designed to respect your privacy.
-Depending on the specific features of each App, we may collect the following types of information:
+        <h3>b. Non-Personal Information</h3>
+        <p>We may collect non-identifiable information automatically, such as:</p>
+        <ul>
+          <li>Device model and operating system version</li>
+          <li>App usage statistics (e.g., number of sessions, crash reports)</li>
+          <li>Anonymous analytics to improve performance and user experience</li>
+        </ul>
+        <p>This data <strong>cannot identify you personally</strong> and is used only in aggregated form.</p>
 
-a. Personal Information
+        <h3>c. Advertising and Analytics</h3>
+        <p>
+          Some Apps may use trusted third-party tools (like Google AdMob, Firebase Analytics, or similar services) to display ads
+          or analyze usage. These services may use cookies or anonymous identifiers to deliver relevant content and measure performance.
+        </p>
+      </li>
 
-We do not require or collect personal information such as your name, email address, phone number, or physical address unless the App specifically asks for it (for example, if you contact us for support).
+      <li>
+        <h2>How We Use Information</h2>
+        <p>The information we collect is used to:</p>
+        <ul>
+          <li>Improve the functionality and performance of our Apps</li>
+          <li>Fix bugs and technical issues</li>
+          <li>Understand usage trends and enhance user experience</li>
+          <li>(If applicable) deliver ads and measure their effectiveness</li>
+        </ul>
+        <p>We <strong>never sell, rent, or share your personal data</strong> with any third party for marketing purposes.</p>
+      </li>
 
-b. Non-Personal Information
+      <li>
+        <h2>Children’s Privacy</h2>
+        <p>
+          Our Apps are intended for general audiences. If an App is specifically designed for children, we comply with the
+          <em>Children’s Online Privacy Protection Act (COPPA)</em> and do not knowingly collect any personal data from children under
+          13 years of age. If you believe that your child has provided personal information, please contact us and we will delete it immediately.
+        </p>
+      </li>
 
-We may collect non-identifiable information automatically, such as:
+      <li>
+        <h2>Data Security</h2>
+        <p>
+          We use reasonable administrative, technical, and physical safeguards to protect the data we collect. However, please understand that
+          <strong>no electronic transmission or storage method is 100% secure</strong>, and we cannot guarantee absolute security.
+        </p>
+      </li>
 
-Device model and operating system version
+      <li>
+        <h2>Your Rights and Choices</h2>
+        <p>Depending on your jurisdiction, you may have rights to:</p>
+        <ul>
+          <li>Request access to or deletion of your data</li>
+          <li>Opt out of analytics or personalized advertising</li>
+        </ul>
+        <p>
+          You can usually manage these options from your device’s privacy settings or by contacting us directly.
+        </p>
+      </li>
 
-App usage statistics (e.g., number of sessions, crash reports)
+      <li>
+        <h2>Third-Party Links</h2>
+        <p>
+          Some Apps may include links to third-party websites or content. We are not responsible for the privacy practices or content of those third parties.
+        </p>
+      </li>
 
-Anonymous analytics to improve performance and user experience
+      <li>
+        <h2>Changes to This Policy</h2>
+        <p>
+          We may update this Privacy Policy periodically. Any changes will be posted with an updated “Last updated” date.
+          You are encouraged to review this Policy regularly.
+        </p>
+      </li>
 
-This data cannot identify you personally and is used only in aggregated form.
+      <li>
+        <h2>Contact Us</h2>
+        <p>
+          If you have any questions, suggestions, or concerns about privacy, please contact us:
+        </p>
+        <p>
+          <strong>Email:</strong> <a href="mailto:info@aradsoft.ca">info@aradsoft.ca</a><br />
+          <strong>Location:</strong> Toronto, Canada
+        </p>
+      </li>
+    </ol>
 
-c. Advertising and Analytics
+    <hr />
+    <footer>
+      &copy; <span id="year"></span> Aradsoft. All rights reserved.
+    </footer>
+  </main>
 
-Some Apps may use trusted third-party tools (like Google AdMob, Firebase Analytics, or similar services) to display ads or analyze usage.
-These services may use cookies or anonymous identifiers to deliver relevant content and measure performance.
-
-3. How We Use Information
-
-The information we collect is used to:
-
-Improve the functionality and performance of our Apps
-
-Fix bugs and technical issues
-
-Understand usage trends and enhance user experience
-
-(If applicable) deliver ads and measure their effectiveness
-
-We never sell, rent, or share your personal data with any third party for marketing purposes.
-
-4. Children’s Privacy
-
-Our Apps are intended for general audiences.
-If an App is specifically designed for children, we comply with the Children’s Online Privacy Protection Act (COPPA) and do not knowingly collect any personal data from children under 13 years of age.
-If you believe that your child has provided personal information, please contact us and we will delete it immediately.
-
-5. Data Security
-
-We use reasonable administrative, technical, and physical safeguards to protect the data we collect.
-However, please understand that no electronic transmission or storage method is 100% secure, and we cannot guarantee absolute security.
-
-6. Your Rights and Choices
-
-Depending on your jurisdiction, you may have rights to:
-
-Request access to or deletion of your data
-
-Opt out of analytics or personalized advertising
-
-You can usually manage these options from your device’s privacy settings or by contacting us directly.
-
-7. Third-Party Links
-
-Some Apps may include links to third-party websites or content.
-We are not responsible for the privacy practices or content of those third parties.
-
-8. Changes to This Policy
-
-We may update this Privacy Policy periodically.
-Any changes will be posted with an updated “Last updated” date.
-You are encouraged to review this Policy regularly.
-
-9. Contact Us
-
-If you have any questions, suggestions, or concerns about privacy, please contact us:
-
-Email: info@aradsoft.ca
-
-Location: Toronto, Canada
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
